trunk/Archive2/53/342297bde18deb/output
main.cpp: In function 'int main()':
main.cpp:10:23: error: expected primary-expression before 'unsigned'
     unsigned int b = (unsigned char(a) & 0xff);
                       ^
main.cpp:10:23: error: expected ')' before 'unsigned'
